Optimized images and updated paths to .webp

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
 <div class="preloader" id="preloader">
-    <img src="/images/logo.png" alt="Loading Logo" class="loader-logo" />
+    <img src="/images/logo.webp" alt="Loading Logo" class="loader-logo" />
 </div>
 
 <header>
-    <div class="logo"><img src="/images/logo.png" alt=""></div>
+    <div class="logo"><img src="/images/logo.webp" alt=""></div>
     <div id="menu" class="fa fa-bars"></div>
     <nav>
         <ul class="list">
@@ -40,22 +40,22 @@
         </div>
     </div>
     <div class="hero-img">
-        <img src="/images/heros.png" alt="" data-aos="fade-left" data-aos-duration="1000">
+        <img src="/images/heros.webp" alt="" data-aos="fade-left" data-aos-duration="1000">
     </div>
 </section>
 
 <section class="about" id="about">
     <div class="container">
         <div class="about-one" data-aos="slide-up" data-aos-duration="1000" data-aos-delay="0">
-            <img src="/images/ChatGPT Image Jul 5, 2025, 10_15_54 PM.png" alt="">
+            <img src="/images/ChatGPT Image Jul 5, 2025, 10_15_54 PM.webp" alt="">
             <p>It all starts with a whisper of fabric between fingers. A vision shared over tea or sketches — your dream, your event, your style. In our atelier, every gown begins with a conversation, not a catalog. We listen. We feel. We imagine with you.</p>
         </div>
         <div class="about-one" data-aos="slide-up" data-aos-duration="1300" data-aos-delay="300">
-            <img src="/images/ChatGPT Image Jul 5, 2025, 10_16_17 PM.png" alt="">
+            <img src="/images/ChatGPT Image Jul 5, 2025, 10_16_17 PM.webp" alt="">
             <p>This is where every piece takes its first breath. Guided by thread and instinct, each stitch brings life to the fabric. Because great fashion isn’t just sewn — it’s felt.</p>
         </div>
         <div class="about-one" data-aos="slide-up" data-aos-duration="1400" data-aos-delay="600">
-            <img src="/images/ChatGPT Image Jul 5, 2025, 10_16_31 PM.png" alt="">
+            <img src="/images/ChatGPT Image Jul 5, 2025, 10_16_31 PM.webp" alt="">
             <p>Then comes the moment. A twirl in the mirror. A gasp. A dress that fits not just your body, but your story. Whether it’s for your ‘yes’, your stage, or your silent glow — this isn’t just an outfit. It’s a memory stitched into fabric.</p>
         </div>
     </div>
@@ -90,28 +90,28 @@
     <h3 class="title">Ankara Native Wears</h3>
     <div class="product-container">
         <div class="product" onclick="openPopup(0)" data-aos="flip-up" data-aos-duration="1000">
-            <img src="/images/ankaragown.png" alt="Ankara Gown">
+            <img src="/images/ankaragown.webp" alt="Ankara Gown">
             <div class="description">
                 <p>Heritage Mermaid</p>
                 <small>Puff sleeves with sweetheart neckline. Mermaid silhouette with floor-sweeping hem. Radiates royal African charm.</small>
             </div>
         </div>
         <div class="product" onclick="openPopup(1)">
-            <img src="/images/sex.png" alt="Sexy Ankara" data-aos="flip-up" data-aos-duration="1000">
+            <img src="/images/sex.webp" alt="Sexy Ankara" data-aos="flip-up" data-aos-duration="1000">
             <div class="description">
                 <p>Cutout Elegance Dress</p>
                 <small>One-shoulder design with symmetrical cutouts. High slit for a daring yet classy look. Ideal for evening wear or weddings.</small>
             </div>
         </div>
         <div class="product" onclick="openPopup(2)" data-aos="flip-down" data-aos-duration="1000">
-            <img src="/images/sexy.png" alt="Chic Ankara">
+            <img src="/images/sexy.webp" alt="Chic Ankara">
             <div class="description">
                 <p>Peplum Royale</p>
                 <small>Off-shoulder neckline with structured peplum. Combines sophistication with vibrance. Works for formal events and traditional ceremonies.</small>
             </div>
         </div>
         <div class="product" onclick="openPopup(3)" data-aos="flip-down" data-aos-duration="1000">
-            <img src="/images/manequin.png" alt="Mannequin Style">
+            <img src="/images/manequin.webp" alt="Mannequin Style">
             <div class="description">
                 <p>Rose Radiance</p>
                 <small>Dramatic butterfly sleeves. Deep green with bold rose patterns. Perfect for runway shows or fashion-forward clients.</small>
@@ -134,20 +134,20 @@
     <div class="title">Abaya wears</div>
     <div class="abaya-scroll-wrapper">
         <div class="abaya-scroll-track" id="scrollTrack" data-aos="zoom-out-right" data-aos-duration="1000">
-            <div class="abaya-product"><img src="/images/abaya2.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/abaya3.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/abaya4.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/abaya5.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/abaya.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/dress.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/dress2.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/abaya2.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/abaya3.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/abaya4.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/abaya5.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/abaya.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/dress.png" alt=""></div>
-            <div class="abaya-product"><img src="/images/dress2.png" alt=""></div>
+            <div class="abaya-product"><img src="/images/abaya2.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/abaya3.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/abaya4.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/abaya5.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/abaya.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/dress.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/dress2.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/abaya2.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/abaya3.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/abaya4.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/abaya5.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/abaya.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/dress.webp" alt=""></div>
+            <div class="abaya-product"><img src="/images/dress2.webp" alt=""></div>
         </div>
     </div>
 </section>
